--- a/src/project.css
+++ b/src/project.css
@@ -4,20 +4,7 @@ body {
   margin-bottom: 10px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.container {
-  max-width: 900px;
-  align-items: center;
-  margin-top: 10px;
-  margin: 0 auto;
-  padding: 30px 50px 30px 30px;
-  border-radius: 5px;
-  box-shadow: rgba(73, 73, 82, 0.8) 0px 10px 10px 0;
-  background: #eaf6f6;
-  max-height: 1200px;
-}
-.search-weather-now {
-  max-width: 400px;
-}
+
 h1 {
   top: 0;
   font-size: 34px;
@@ -39,17 +26,31 @@ h3 {
   font-weight: 600px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-h5 {
+h4 {
   text-align: center;
   text-decoration: bold;
-  color: #66bfbf;
+  color: #17a2b8;
   font-size: 1rem;
 }
-
+form {
+  max-width: 600px;
+}
 a {
   text-decoration: none;
   color: #f76b8a;
   font-size: 11px;
+}
+
+.container {
+  max-width: 900px;
+  align-items: center;
+  margin-top: 10px;
+  margin: 0 auto;
+  padding: 30px 50px 30px 30px;
+  border-radius: 5px;
+  box-shadow: rgba(73, 73, 82, 0.8) 0px 10px 10px 0;
+  background: #eaf6f6;
+  max-height: 1200px;
 }
 
 .cityData .active:hover {
@@ -89,20 +90,20 @@ a {
   color: #17a2b8;
   font-size: 34px;
   line-height: 1;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .cityData,
 #temp-day {
   color: rgb(33, 33, 33);
-  font-size: 58px;
+  font-size: 46px;
   line-height: 1;
   font-weight: 400;
 }
 
 #temp-night {
   color: rgb(33, 33, 33);
-  font-size: 58px;
+  font-size: 46px;
   line-height: 1;
   font-weight: 400;
   opacity: 50%;
@@ -112,7 +113,7 @@ a {
   width: 280px;
   text-align: center;
   width: 230px;
-  margin: 60px 680px 10px 3px;
+  margin: 60px 680px 30px 3px;
   border-radius: 5px;
   border-color: #17a2b8;
   color: #17a2b8;
@@ -173,9 +174,7 @@ a {
   float: right;
   margin-top: -580px;
 }
-form {
-  max-width: 600px;
-}
+
 #celcius-link,
 #fahrenheit-link {
   position: relative;
@@ -203,4 +202,15 @@ form {
   color: #063634;
   font-size: 12px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+.square {
+  border-radius: 5px;
+  border-color: #17a2b8;
+  border-radius: 2px;
+  box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
+  background: transparent;
+  width: 50px;
+  height: 20px;
+  margin: 2px 10px 55px 85px;
+  padding: 8px 3px 2px 1px;
 }
