--- a/src/project.css
+++ b/src/project.css
@@ -53,12 +53,6 @@ a {
   max-height: 1200px;
 }
 
-.cityData .active:hover {
-  text-decoration: none;
-  color: #f76b8a;
-  cursor: default;
-}
-
 .form-control {
   transition: all 0.5s ease;
   background: #66bfbf;
@@ -67,24 +61,25 @@ a {
   background: #f76b8a;
 }
 
-.additional {
-  font-size: 28px;
-  color: #f76b8a;
+.dataContainer {
+  width: 200px;
+  float: right;
+  margin-top: -580px;
 }
 
-.card-img-top {
-  width: 50%;
-  margin: 0 auto;
+.dataContainer .myCity {
+  padding: -18px 5px 55px 20px;
+  width: 280px;
+  text-align: center;
+  width: 270px;
+  margin: 60px 680px 42px -28px;
+  border-radius: 5px;
+  border-color: #17a2b8;
+  color: #17a2b8;
+  box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
+  background: transparent;
 }
 
-.col-2 {
-  padding-right: 0px;
-  padding-left: 16px;
-}
-
-.col-4 {
-  padding-left: 11px;
-}
 .myCity,
 #city {
   color: #17a2b8;
@@ -93,6 +88,9 @@ a {
   font-weight: 600;
 }
 
+#city {
+  text-transform: uppercase;
+}
 .cityData,
 #temp-day {
   color: rgb(33, 33, 33);
@@ -108,28 +106,44 @@ a {
   font-weight: 400;
   opacity: 50%;
 }
-.dataContainer .myCity {
-  padding: -18px 5px 55px 20px;
-  width: 280px;
-  text-align: center;
-  width: 230px;
-  margin: 60px 680px 30px 3px;
-  border-radius: 5px;
-  border-color: #17a2b8;
-  color: #17a2b8;
-  box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
-  background: transparent;
-}
 
 .cityData {
   margin: 10px 680px 10px -10px;
-  /* border-radius: 5px;
-  box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
-  background: white; */
   width: 230px;
   text-align: center;
 }
 
+.cityData .active:hover {
+  text-decoration: none;
+  color: #f76b8a;
+  cursor: default;
+}
+
+.additional {
+  font-size: 28px;
+  color: #f76b8a;
+}
+
+.card-img-top {
+  width: 50%;
+  margin: 0 auto;
+}
+.row {
+  max-width: 678px;
+  margin-right: -67px;
+  margin-left: 18px;
+}
+.col-2 {
+  padding-right: 0px;
+  padding-left: 16px;
+}
+
+.col-4 {
+  padding-left: 11px;
+}
+.col-6 {
+  padding-left: 11px;
+}
 .card-body {
   text-align: center;
 }
@@ -140,39 +154,31 @@ a {
   border-radius: 5px;
   box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
   background: transparent;
-  /* margin: 10px 20px 8px 26px; */
 }
 
 .weather-forecast,
 #forecast {
-  margin: 4px 64px 8px -24px;
+  margin: 9px 64px 8px -20px;
 }
 
 .row .cityData {
   margin: 15px 50px 40px -90px;
 }
-.forecast-date {
-  text-align: center;
-}
-
+.forecast-date,
 .forecast-temp {
   text-align: center;
 }
+
 .forecast-temp-min {
   opacity: 50%;
   text-align: center;
 }
 .main-image {
-  border-radius: 8px;
+  border-radius: 5px;
   margin-bottom: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
   box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
-}
-.dataContainer {
-  width: 200px;
-  float: right;
-  margin-top: -580px;
 }
 
 #celcius-link,
@@ -180,15 +186,6 @@ a {
   position: relative;
   font-size: 16px;
   top: -34px;
-}
-.row {
-  max-width: 678px;
-  margin-right: -82px;
-  margin-left: 18px;
-}
-
-.col-6 {
-  padding-left: 11px;
 }
 
 .weather-forecast,
