--- a/src/project.css
+++ b/src/project.css
@@ -108,16 +108,16 @@ a {
 }
 
 .cityData {
-  margin: 10px 680px 10px -10px;
   width: 230px;
   text-align: center;
+  margin: 10px 5px 5px 10px;
 }
 
-.cityData .active:hover {
+/* .cityData .active:hover {
   text-decoration: none;
   color: #f76b8a;
   cursor: default;
-}
+} */
 
 .additional {
   font-size: 28px;
@@ -132,6 +132,7 @@ a {
   max-width: 678px;
   margin-right: -67px;
   margin-left: 18px;
+  margin-bottom: 10px;
 }
 .col-2 {
   padding-right: 0px;
@@ -185,9 +186,15 @@ a {
 #fahrenheit-link {
   position: relative;
   font-size: 16px;
-  top: -34px;
+  top: -26px;
+  margin: 1px -6px 3px 0px;
 }
-
+#fahrenheit-link:hover {
+  color: #17a2b8;
+}
+#celcius-link:hover {
+  color: #17a2b8;
+}
 .weather-forecast,
 .row {
   max-width: 830px;
@@ -200,7 +207,22 @@ a {
   font-size: 12px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-.square {
+.cityData .active {
+  cursor: default;
+  text-decoration: none;
+}
+.cityData .units {
+  color: #17a2b8;
+}
+
+.cityData .active:hover {
+  text-decoration: none;
+}
+.units {
+  margin: -2px 22px -29px -3px;
+  font-weight: bold;
+}
+/* .square {
   border-radius: 5px;
   border-color: #17a2b8;
   border-radius: 2px;
@@ -208,6 +230,6 @@ a {
   background: transparent;
   width: 50px;
   height: 30px;
-  margin: 2px 10px 55px 86px;
+  margin: -5px 10px 55px 74px;
   padding: 9px 0px 5px 1px;
-}
+} */
