--- a/src/project.css
+++ b/src/project.css
@@ -182,6 +182,11 @@ a {
   box-shadow: rgba(20, 101, 90, 0.8) 0px 2px 2px 0;
 }
 
+#celcius-link.active,
+#fahrenheit-link.active {
+  pointer-events: none;
+}
+
 #celcius-link,
 #fahrenheit-link {
   position: relative;
